# codex-app-transfer

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  ARCHITECTURE_PROTOCOL_GUIDE.md  Cargo.toml  Dockerfile  Makefile  README.en.md  README.md  build.bat  build.spec  installer.nsi  main.py  messages-responses-protocol-task-tree.md  requirements.txt  start.bat  v1.0.3-gap-task-plan.md  websearch-tool-context-task.md
.github/workflows/: egui-bundle-test.yml  no-ai-coauthor.yml  release.yml
agent/: issues.md
backend/: ccswitch_import.py  config.py  main.py  model_alias.py  provider_tools.py  proxy.py  registry.py  responses_adapter.py  update.py
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  openai_chat.rs  registry.rs  types.rs
crates/adapters/src/anthropic_messages/: mod.rs
crates/adapters/src/core/: input.rs
crates/adapters/src/gemini_cli/: mod.rs  request.rs
crates/adapters/src/gemini_native/: mod.rs  request.rs  response.rs
crates/adapters/src/grok_web/: auth.rs  parent_response.rs  request.rs  response.rs
crates/adapters/src/mapper/: cloud_code.rs  grok_web.rs  mod.rs
crates/adapters/src/responses/: compact.rs  converter.rs  input.rs  mod.rs  request.rs  session.rs
crates/adapters/tests/: anthropic_messages_request.rs  responses_streaming.rs
crates/admin_api/: Cargo.toml
crates/admin_api/src/: lib.rs
crates/admin_api/src/admin/: handlers.rs  mod.rs  registry_io.rs  state.rs  static_files.rs
crates/codex_integration/src/: apply.rs  lib.rs  model_catalog.rs  paths.rs  snapshot.rs
crates/desktop_app/: Cargo.toml
crates/desktop_app/icons/: icon.icns
crates/desktop_app/src/: app.rs  background.rs  main.rs  state.rs  system.rs
crates/desktop_app/src/i18n/: mod.rs  strings.toml
crates/desktop_app/src/page/: dashboard.rs  desktop.rs  guide.rs  mod.rs  providers.rs  providers_add.rs  proxy.rs  settings.rs
crates/desktop_app/src/theme/: mod.rs
crates/desktop_state/: Cargo.toml
crates/desktop_state/src/: action.rs  effect.rs  lib.rs  model.rs
crates/gemini_oauth/: Cargo.toml
crates/gemini_oauth/src/: constants.rs  flow.rs  lib.rs  service.rs  token.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: diagnostics.rs  forward.rs  lib.rs  resolver.rs  server.rs  telemetry.rs
crates/proxy/tests/: auth_and_routing.rs  cache_miss_e2e.rs  stop_releases_port.rs  streaming_passthrough.rs
crates/proxy_runner/: Cargo.toml
crates/proxy_runner/src/: lib.rs
crates/registry/src/: healing.rs  lib.rs  paths.rs  presets.rs  presets_data.json
docker/linux-builder/: Dockerfile  build.sh
docker/windows-builder/: Dockerfile  build.sh
docs/: api-route-status.md  build.md  followup-tracker.md  gemini-cli-oauth-research.md  protocol-unification-rfc-phase1.md  protocol-unification-rfc-phase4.md  protocol-unification-rfc-phase5-anthropic-messages.md  release-notes-v2.0.8.md  release-notes-v3.0.0.md  v3-egui-native-migration.md  web-search-implementation-tracker.md
docs/followup/: 23-grok-web-url-citation-redundancy.md  28-account-restore-desktop-clear-no-snapshot-guard.md  29-account-restore-cleanup-all-destructive.md  30-account-restore-single-storage-no-redundancy.md  31-account-restore-cross-version-managed-keys.md  32-plugin-unlock-react-context-rerender.md  33-windows-plugin-unlock-msix-store.md  34-update-client-rsa-signature-verify.md  37-download-asset-toctou-and-bad-sha-test.md
docs/plans/: 2026-05-13-messages-responses-protocol.md
docs/release-notes/: v2.0.8.md  v2.1.7.md  v2.1.8.md
docs/research/: 24-25-codex-cli-schema-spike.md
feedback-worker/: worker.js
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  i18n.js
macos/: README.md  build-macos.sh  build-macos.spec  make-dmg.sh  make-pkg.sh
macos/pkg-scripts/: preinstall
scripts/: New-Release.ps1  Test-ReleaseSignature.ps1  build-linux-on-mac.sh  build-windows-on-mac.sh  check_release_version.py  release_assets.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_plugin_unlocker.rs  lib.rs  main.rs  proxy_runner.rs  telemetry_bridge.rs  windows_msix.rs
src-tauri/src/admin/: handlers.rs  mod.rs  registry_io.rs
src-tauri/src/admin/handlers/: agents_md.rs  antigravity_oauth.rs  common.rs  desktop.rs  feedback.rs  gemini_oauth.rs  mod.rs  proxy.rs  settings.rs  update.rs
src-tauri/src/admin/handlers/providers/: balance.rs  crud.rs  mod.rs  models.rs  test.rs
src-tauri/src/admin/services/: managed_block.rs  mod.rs
tests/: test_deepseek_thinking_tool_history.py  test_isolation.py  test_kimi_real.py  test_tool_call.py
tests/replay/fixtures/registry/: builtin_presets.json
