[package]
name = "codex-app-transfer"
version = "2.0.9"
description = "Codex App Transfer - Tauri 2 shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# 二进制入口
[[bin]]
name = "codex-app-transfer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# W1:admin / proxy_runner 已抽到独立 crate
codex-app-transfer-admin-api = { path = "../crates/admin_api" }
codex-app-transfer-proxy-runner = { path = "../crates/proxy_runner" }
# main.rs 直接调到的几条仍保留
codex-app-transfer-codex-integration = { path = "../crates/codex_integration" }
codex-app-transfer-registry = { path = "../crates/registry" }
codex-app-transfer-proxy = { path = "../crates/proxy" }
# Tauri custom protocol 仍要的:tokio runtime / axum oneshot / tower / bytes
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
tower = "0.5"
bytes = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication"] }

[features]
# 默认空,自定义 protocol 在打包时启用
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
