[package]
name = "codex-app-transfer"
version = "2.1.11"
description = "Codex App Transfer - Tauri 2 shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# 共享库(admin API + proxy runner + telemetry bridge)
# desktop binary 与 server binary 共用此 lib
[lib]
name = "codex_app_transfer_app"
path = "src/lib.rs"

# Tauri 桌面二进制
[[bin]]
name = "codex-app-transfer"
path = "src/main.rs"
required-features = ["desktop"]

# 独立服务器二进制(不含 Tauri)
[[bin]]
name = "codex-app-transfer-server"
path = "src/bin/server.rs"
required-features = ["server"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codex-app-transfer-registry = { path = "../crates/registry" }
codex-app-transfer-codex-integration = { path = "../crates/codex_integration" }
codex-app-transfer-proxy = { path = "../crates/proxy" }
codex-app-transfer-adapters = { path = "../crates/adapters" }
codex-app-transfer-gemini-oauth = { path = "../crates/gemini_oauth" }
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
base64 = "0.22"
getrandom = "0.2"
# 以下 5 项为 cas:// scheme 静态文件路由的跨平台依赖,
# 之前误放在 [target.macos] 块下导致 Linux/Windows cargo check 失败。
tower = "0.5"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2"] }
# sha2 "oid" feature 让 `Pkcs1v15Sign::new::<Sha256>()` 编译过 (admin/signature.rs
# 客户端验签需要 OID-tagged Sha256, 跟 xtask/Cargo.toml 设置对齐避免 cross-impl drift)。
sha2 = { version = "0.10", features = ["oid"] }
# RSA-3072 PKCS1-v15-SHA256 客户端验签 (update.rs:fetch_latest_json + download_asset_impl
# 双侧 verify 通过 admin::signature::verify_signed_bytes)。算法跟 xtask/release_bundle.rs
# 对称: xtask sign side / src-tauri verify side 同 crate 同版本, 防 cross-impl drift。
rsa = { version = "0.9", features = ["sha2", "pem"] }
# cross-process file locking — config.json RMW 跨实例(双开 .app)防 lost-update。
# 进程内 std::sync::Mutex 不管多 OS 进程,fs2::FileExt::lock_exclusive 走 fcntl
# (POSIX) / LockFileEx (Windows),OS 级独占。
fs2 = "0.4"
# CDP WebSocket 连接（Codex Plugins 解锁器）
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# futures 用于 WebSocket Stream/Sink 的 split 操作
futures = "0.3"
# server feature deps:CLI 参数解析 + HTTP 中间件
clap = { version = "4", features = ["derive", "env"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication"] }

# Windows MSIX Codex Desktop 启动 — IApplicationActivationManager COM 调用
# 让 packaged Codex.exe 接收 `--remote-debugging-port=9222` 启动参数,
# 绕过 explorer.exe shell:AppsFolder 协议剥 args 的限制。
# 借鉴 BigPizzaV3/CodexPlusPlus `codex_session_delete/launcher.py:347-395`,
# 用 windows-rs 官方 binding 而非手搓 ctypes COM,稳定性更好。
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[features]
default = ["desktop", "custom-protocol"]
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-single-instance",
]
custom-protocol = ["tauri/custom-protocol"]
server = [
    "dep:clap",
    "dep:tower-http",
]
