[package]
name = "codex-app-transfer-admin-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-codex-integration = { path = "../codex_integration" }
codex-app-transfer-proxy = { path = "../proxy" }
codex-app-transfer-proxy-runner = { path = "../proxy_runner" }
codex-app-transfer-registry = { path = "../registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
base64 = "0.22"
getrandom = "0.2"
tower = "0.5"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2"] }
sha2 = "0.10"
