[package]
name = "codex-app-transfer-desktop-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# bin 入口(W2 起步;W7 扩展打包流程)
[[bin]]
name = "desktop_app"
path = "src/main.rs"

[build-dependencies]
toml = "0.8"
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }

[dependencies]
# UI 框架
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
# Guide page 静态富文本(W5)— 关 image/svg loader,我们不渲染图片,
# 留 macros 让 cache 等基本类型可用
egui_commonmark = { version = "0.20", default-features = false }
# 静态 phf 表用,build.rs 端 phf_codegen 输出 phf::Map<&str, [&str; 2]>
phf = "0.11"
# 共享 state(W1 抽出的 scaffolding)
codex-app-transfer-desktop-state = { path = "../desktop_state" }
# W3:数据源
codex-app-transfer-registry = { path = "../registry" }
codex-app-transfer-codex-integration = { path = "../codex_integration" }
codex-app-transfer-proxy-runner = { path = "../proxy_runner" }
# W5:proxy_telemetry()(Proxy page 实时日志 + stats)
codex-app-transfer-proxy = { path = "../proxy" }
# W6:async action 接通需要 tokio runtime + HTTP client + 系统集成
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2"] }
opener = "0.7"
arboard = "3"
rfd = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
