[package]
name = "codex-app-transfer-proxy-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-proxy = { path = "../proxy" }
codex-app-transfer-registry = { path = "../registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
